--- a/index.html
+++ b/index.html
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Funko pop</title>
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <header>
-        <h1>
-            Funko Legend
-        </h1>
+        IMG 
+        <nav>
+
+            <div id="icon-menu">
+                <i class="bi bi-list"></i>
+                <ul id="menu-celular">
+                    <li><a href="#">Categorias</a></li>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Suporte</a></li>
+                </ul>
+            </div>
+
+            <ul id="menu">
+                <li><a href="#">Categorias</a></li>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Suporte</a></li>
+            </ul>
+        </nav>
+
     </header>
 </body>
 </html>
