salve nova img no site

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <main>
-        
+        <div class="img-topo"><img src="img/Design sem nome (3).png" alt="img funko pop"></div>
     </main>
 </body>
 </html>
