--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     <main>
         <div class="img-topo"><img src="img/Design sem nome (3).png" alt="img funko pop"></div>
         <div id="text1">
-            <h1>Funko pop</h1>
+            <h1>Funko Legend</h1>
             <p>Esse é o universo dos bonecos Funko Pop! Se você deseja algum ou está procurando seu boneco ideal, este é o lugar certo. Seja bem-vindo à Funko Legend.</p>
         </div>
+
     </main>
 </body>
 </html>
