--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
 
             <div id="icon-menu">
-                <i class="bi bi-list"></i>
-                <ul id="menu-celular">
+                <i class="bi bi-list" onclick="clicou_menu()"></i>
+                <ul id="menu_celular">
                     <li><a href="#">Categorias</a></li>
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Suporte</a></li>
@@ -30,12 +30,21 @@
     </header>
 
     <main>
-        <div class="img-topo"><img src="img/Design sem nome (3).png" alt="img funko pop"></div>
-        <div id="text1">
-            <h1>Funko Legend</h1>
-            <p>Esse é o universo dos bonecos Funko Pop! Se você deseja algum ou está procurando seu boneco ideal, este é o lugar certo. Seja bem-vindo à Funko Legend.</p>
+        <div id="conteudo1">
+            <div class="img-topo"><img src="img/Design sem nome (3).png" alt="img funko pop"></div>
+            <div id="text1">
+                <h1>Funko Legend</h1>
+                <p>Esse é o universo dos bonecos Funko Pop! Se você deseja algum ou está procurando seu boneco ideal, este é o lugar certo. Seja bem-vindo à Funko Legend.</p>
+            </div>
         </div>
 
+        <div id="vitrine1">
+             <div class="produto-caixa">
+                <img src="img/boneco-01.png" alt="boneco samurai">
+                <h1>Luci king</h1>
+             </div>
+        </div>
     </main>
+    <script src="java.js"></script>
 </body>
 </html>
