salva nova vitrine

--- a/index.html
+++ b/index.html
@@ -38,11 +38,61 @@
             </div>
         </div>
 
-        <div id="vitrine1">
-             <div class="produto-caixa">
-                <img src="img/boneco-01.png" alt="boneco samurai">
-                <h1>Luci king</h1>
-             </div>
+        <div class="vitrine">
+            <a href="#">
+                <div class="produto">
+                    <img src="img/boneco-01.png" alt="funko pop samurai">
+                    <h1>The King</h1>
+                    <p class="preço-anterior">R$ 1.999</p>
+                    <p class="preço-atual">R$ 1.499</p>
+                    <h2>Frete Grátis</h2>
+                </div>
+            </a>
+            <a href="#">
+                <div class="produto">
+                    <img src="img/boneco-01.png" alt="funko pop samurai">
+                    <h1>The King</h1>
+                    <p class="preço-anterior">R$ 1.999</p>
+                    <p class="preço-atual">R$ 1.499</p>
+                    <h2>Frete Grátis</h2>
+                </div>
+            </a>
+            <a href="#">
+                <div class="produto">
+                    <img src="img/boneco-01.png" alt="funko pop samurai">
+                    <h1>The King</h1>
+                    <p class="preço-anterior">R$ 1.999</p>
+                    <p class="preço-atual">R$ 1.499</p>
+                    <h2>Frete Grátis</h2>
+                </div>
+            </a>
+            <a href="#">
+                <div class="produto">
+                    <img src="img/boneco-01.png" alt="funko pop samurai">
+                    <h1>The King</h1>
+                    <p class="preço-anterior">R$ 1.999</p>
+                    <p class="preço-atual">R$ 1.499</p>
+                    <h2>Frete Grátis</h2>
+                </div>
+            </a>
+            <a href="#">
+                <div class="produto">
+                    <img src="img/boneco-01.png" alt="funko pop samurai">
+                    <h1>The King</h1>
+                    <p class="preço-anterior">R$ 1.999</p>
+                    <p class="preço-atual">R$ 1.499</p>
+                    <h2>Frete Grátis</h2>
+                </div>
+            </a>
+            <a href="#">
+                <div class="produto">
+                    <img src="img/boneco-01.png" alt="funko pop samurai">
+                    <h1>The King</h1>
+                    <p class="preço-anterior">R$ 1.999</p>
+                    <p class="preço-atual">R$ 1.499</p>
+                    <h2>Frete Grátis</h2>
+                </div>
+            </a>
         </div>
     </main>
     <script src="java.js"></script>
