salva vitrine img

--- a/index.html
+++ b/index.html
@@ -41,55 +41,46 @@
         <div class="vitrine">
             <a href="#">
                 <div class="produto">
-                    <img src="img/boneco-01.png" alt="funko pop samurai">
-                    <h1>The King</h1>
-                    <p class="preço-anterior">R$ 1.999</p>
-                    <p class="preço-atual">R$ 1.499</p>
+                    <img src="img/homem-aranha.png" alt="funko pop samurai">
+                    <h1>Spider-Mam</h1>
+                    <p class="preço-anterior">R$ 599,99</p>
+                    <p class="preço-atual">R$ 354.71</p>
                     <h2>Frete Grátis</h2>
                 </div>
             </a>
             <a href="#">
                 <div class="produto">
-                    <img src="img/boneco-01.png" alt="funko pop samurai">
-                    <h1>The King</h1>
-                    <p class="preço-anterior">R$ 1.999</p>
-                    <p class="preço-atual">R$ 1.499</p>
+                    <img src="img/kratos-caixa.png" alt="funko pop samurai">
+                    <h1>Kratos</h1>
+                    <p class="preço-anterior">R$ 889.98</p>
+                    <p class="preço-atual">R$ 662.86</p>
                     <h2>Frete Grátis</h2>
                 </div>
             </a>
             <a href="#">
                 <div class="produto">
-                    <img src="img/boneco-01.png" alt="funko pop samurai">
-                    <h1>The King</h1>
-                    <p class="preço-anterior">R$ 1.999</p>
-                    <p class="preço-atual">R$ 1.499</p>
+                    <img src="img/perna-longa.png" alt="funko pop samurai">
+                    <h1>Perna Longa</h1>
+                    <p class="preço-anterior">R$ 399.89</p>
+                    <p class="preço-atual">R$ 289.90</p>
                     <h2>Frete Grátis</h2>
                 </div>
             </a>
             <a href="#">
                 <div class="produto">
-                    <img src="img/boneco-01.png" alt="funko pop samurai">
-                    <h1>The King</h1>
-                    <p class="preço-anterior">R$ 1.999</p>
-                    <p class="preço-atual">R$ 1.499</p>
+                    <img src="img/thor.png" alt="funko pop samurai">
+                    <h1>Thor</h1>
+                    <p class="preço-anterior">R$ 289.99</p>
+                    <p class="preço-atual">R$ 113.05</p>
                     <h2>Frete Grátis</h2>
                 </div>
             </a>
             <a href="#">
                 <div class="produto">
-                    <img src="img/boneco-01.png" alt="funko pop samurai">
-                    <h1>The King</h1>
-                    <p class="preço-anterior">R$ 1.999</p>
-                    <p class="preço-atual">R$ 1.499</p>
-                    <h2>Frete Grátis</h2>
-                </div>
-            </a>
-            <a href="#">
-                <div class="produto">
-                    <img src="img/boneco-01.png" alt="funko pop samurai">
-                    <h1>The King</h1>
-                    <p class="preço-anterior">R$ 1.999</p>
-                    <p class="preço-atual">R$ 1.499</p>
+                    <img src="img/azul.png" alt="funko pop samurai">
+                    <h1>Smiling</h1>
+                    <p class="preço-anterior">R$ 459.98</p>
+                    <p class="preço-atual">R$ 290.00</p>
                     <h2>Frete Grátis</h2>
                 </div>
             </a>
