--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 
     <main>
         <div id="conteudo1">
-            <div class="img-topo"><img src="img/Design sem nome (3).png" alt="img funko pop"></div>
+            <div class="img-topo">
+                <picture>
+                    <source media="(max-width: 600px)" srcset="img/capa-pequena.png" type="image/png">
+                    <img src="img/Design sem nome (3).png" alt="img funko pop">
+                </picture>
+            </div>
             <div id="text1">
                 <h1>Funko Legend</h1>
                 <p>Esse é o universo dos bonecos Funko Pop! Se você deseja algum ou está procurando seu boneco ideal, este é o lugar certo. Seja bem-vindo à Funko Legend.</p>
